<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:keepScreenOn="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="vertical"
                android:padding="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:text="@string/message_log"
                    android:textColor="?TextInfoColor"
                    android:textSize="16sp"
                    android:textStyle="bold" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <ScrollView
                    android:id="@+id/scrollviewText"
                    android:layout_width="match_parent"
                    android:layout_height="225dp">

                    <TextView
                        android:id="@+id/messagelogTextView"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:scrollbars="vertical"
                        android:text="@string/init"
                        android:textColor="?TextViewHeaderColor"
                        android:textSize="12sp" />
                </ScrollView>
            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/deviceconnectionStatusTv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:scrollbars="vertical"
                    android:text="@string/wearable_device_is_connected"
                    android:textColor="?TextViewHeaderColor"
                    android:textSize="15sp"
                    android:visibility="gone" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:orientation="vertical">


                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/textInputLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/message"
                    android:textColorHint="?TextViewHeaderColor"
                    android:visibility="gone">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/messagecontentEditText"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:maxLines="1"
                        android:textColor="?TextInfoColor"
                        android:textSize="15sp" />

                </com.google.android.material.textfield.TextInputLayout>

            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="15dp"
                android:layout_weight="2"
                android:orientation="vertical">


                <Button
                    android:id="@+id/checkwearablesButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:scrollbars="vertical"
                    android:text="@string/check_for_connected_wearables"
                    android:textColor="?TextInfoColor"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <Button
                    android:id="@+id/sendmessageButton"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:background="?attr/selectableItemBackground"
                    android:gravity="center"
                    android:scrollbars="vertical"
                    android:text="@string/send_message_alt"
                    android:textColor="?TextInfoColor"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

            </LinearLayout>


        </LinearLayout>


    </ScrollView>

</RelativeLayout>